// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docz setup 1`] = `
<DocumentFragment>
  <div
    class="css-10t5zsk-AlertStyled eto1ytx0"
    kind="info"
  />
</DocumentFragment>
`;

exports[`docz setup 2`] = `
<DocumentFragment>
  <div
    class="css-1wbxlgv-AlertStyled eto1ytx0"
    kind="negative"
  />
</DocumentFragment>
`;
